# jsonata-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: jsonataConfig.cmake.in
include/jsonata/: Functions.h  JException.h  Jsonata.h  Parser.h  Timebox.h  Tokenizer.h  Utils.h
include/jsonata/utils/: Constants.h  DateTimeUtils.h  Signature.h
src/jsonata/: Functions.cpp  JException.cpp  Jsonata.cpp  Parser.cpp  Timebox.cpp  Tokenizer.cpp  Utils.cpp
src/jsonata/utils/: Constants.cpp  DateTimeUtils.cpp  Signature.cpp
test/: ArrayTest.cpp  CustomFunctionTest.cpp  DateTimeTest.cpp  Generate.cpp  JsonataTest.cpp  JsonataTest.h  NullSafetyTest.cpp  NumberTest.cpp  NumberTestSimplified.cpp  ParseIntegerTest.cpp  SerializationTest.cpp  SignatureTest.cpp  StringTest.cpp  ThreadTest.cpp  TypesTest.cpp  test-overrides.json
